Fix ace editor font alignment/display issue

--- a/web_client/stylesheets/index.styl
+++ b/web_client/stylesheets/index.styl
@@ -77,3 +77,6 @@ html body svg
   margin-bottom 10px
   border-bottom 1px solid #eee
   padding-bottom 5px
+
+.ace_content *
+  font-family monospace !important
